# YDB

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile-centos  Dockerfile-debian  Dockerfile-rocky  Dockerfile-test  LICENSE  Makefile  README  README.darwin  README.md  README.txt  TODO.darwin  allfiles.list  parsemsg.c  pre-commit  pre-rebase  sr_armv6l  tar.list  tmg_backup
ci/: build.sh  commit_gpgkey_verify.sh  commit_verify.sh  copyright.py  create_tidy_warnings.sh  needs_copyright.sh  sort_warnings.sh  tidy_warnings.ref  tidy_warnings_debug.ref  tidy_warnings_debug_aarch64.ref  tidy_warnings_debug_x86_64.ref  tidy_warnings_release.ref  tidy_warnings_release_aarch64.ref  tidy_warnings_release_x86_64.ref
cmake/: git-watcher.cmake  set-help-read-only.cmake
fuzzing/: Makefile  README.md  cleaner.sh  enhanced_fuzz.csh  fuzz.sh  gtm_dump_core.c.patch  gtm_fork_n_core.c.patch  gtm_putmsg_list.c.patch  instrument.sh  io.h.patch  jobexam_process.c.patch  make_corpus.sh  ojchildioset.c.patch  op_fnzsigproc.c.patch  op_hang.c.patch  op_zmess.c.patch  op_zsystem.c.patch  sig_init.c.patch  stp_gcol_src.h.patch
release_notes/: r1_32.md
sr_aarch64/: GTMDefinedTypesInitDebug.m  GTMDefinedTypesInitRelease.m  aarch64.h  aarch64_gtm_registers.h  aarch64_registers.h  aswp.s  call_dm.s  ci_restart.s  compswap.s  debug.si  dm_start.s  emit_code_sp.c  emit_code_sp.h  error.si  find_line_call.c  follow.s  g_msf.si  incr_link_sp.h  linkage.si  make_dmode_sp.h  make_mode_sp.h  merrors_ansi.h  mint2mval.s  mum_tstart.s  mval2bool.s  mval2mint.s  mval2num.s  mval_def.si  obj_filesp.c  op_bkpt.s  op_bxrelop.s  op_call.s  op_callsp.s  op_contain.s  op_currtn.s  op_equ.s  op_equnul.s  op_exfun.s  op_extcall.s  op_extexfun.s  (+104 more)
sr_alpha/: axp.h  cacheflush.m64  double2s.c  emit_code_sp.c  emit_code_sp.h  follow.m64  gtm_dump.c  inst_flush.m64  mint2mval.m64  movq.m64  mval2bool.m64  mval2mint.m64  objlangdefs.h  op_call.m64  op_equnul.m64  op_forlcldo.m64  op_linestart.m64  op_pattern.m64  op_sorts_after.m64  pseudo_ret.m64  zbreaksp.h
sr_armv7l/: GTMDefinedTypesInitDebug.m  GTMDefinedTypesInitRelease.m  arm.h  arm_gtm_registers.h  arm_registers.h  aswp.s  call_dm.s  ci_restart.s  cmerrors_ctl.c  cmierrors_ctl.c  compswap.s  debug.si  dm_start.s  emit_code_sp.c  emit_code_sp.h  error.si  find_line_call.c  follow.s  g_msf.si  gdeerrors_ctl.c  incr_link_sp.h  linkage.si  make_dmode_sp.h  make_mode_sp.h  merrors_ansi.h  merrors_ctl.c  mint2mval.s  mum_tstart.s  mval2bool.s  mval2mint.s  mval2num.s  mval_def.si  obj_filesp.c  op_bkpt.s  op_bxrelop.s  op_call.s  op_callsp.s  op_contain.s  op_currtn.s  op_equ.s  (+110 more)
sr_avms/: adawi.c  aswp.m64  aswp_secshr.m64  aswp_src.h  auto_zlink.c  auto_zlink.h  axp_gtm_registers.h  axp_registers.h  base_frame.max  bci.mar  bind_symbol.m64  bndsym.max  bsi.mar  call_dm.m64  caller_id.m64  callg.mar  cmi_symbols.m64  cmilink.axp  code_psect.max  compswap.m64  compswap_secshr.m64  compswap_src.h  create_base_frame.max  data_psect_bound.m64  ddp_dal_dispatch.m64  ddpgvusr_symbols.m64  ddplink.axp  error_return_vms.m64  fetch_all.m64  fetch_args.max  fgncal_dispatch.m64  fgncal_rtn.m64  find_line_call.c  g_msf.max  get_registers.m64  getframe.max  gtm$defaults.m64  gtm$fgncall.m64  gtm_code_address.m64  gtm_dyn_ch.m64  (+104 more)
sr_cmi/: cmi_close.c  cmi_init.c  cmi_open.c  cmi_read.c  cmi_write.c  cmi_write_int.c  cmierrors.msg  cmihdr.h  cmivector.mar  cmj_ast.c  cmj_disconn2.c  cmj_fini.c  cmj_iostart.c  cmj_mbx_ast.c  cmj_mbx_read_start.c  cmj_netinit.c  cmj_unit2clb.c  cmj_util.mar  cmu_getclb.c  cmu_makclb.c  cmu_ntdroot.c
sr_darwin/: arch.gtc  emit_code_sp.h  gen_threadgbl_asm.cmake  i386.h  incr_link_sp.h  inst_flush.c  make_mode_sp.h  obj_filesp.c  platform.cmake  release_name.h  test_macho.c  timing_mach.c  timing_mach.h  x86_64.h  zbreaksp.h
sr_i386/: GDEINITSZ.m  GTMDefinedTypesInitDebug.m  GTMDefinedTypesInitRelease.m  aswp.s  auto_zlink.c  auto_zlink.h  call_dm.s  caller_id.s  callg.s  ci_restart.s  cmerrors_ctl.c  cmierrors_ctl.c  compswap.s  dm_start.s  emit_code.c  emit_code.h  error.si  find_line_call.c  follow.s  g_msf.si  gdeerrors_ctl.c  gtm_threadgbl_asm_access.txt  gtm_threadgbl_deftypes.h  gtm_threadgbl_deftypes_asm_dbg.si  gtm_threadgbl_deftypes_asm_pro.si  i386.h  i386_mod_16.h  i386_mod_32.h  i386_ops.h  i386_ops_2b.h  i386_ops_g1.h  i386_ops_g2.h  i386_ops_g3.h  i386_ops_g4.h  i386_ops_g5.h  i386_ops_g6.h  i386_ops_g7.h  i386_ops_g8.h  i386_reg16.h  i386_reg32.h  (+110 more)
sr_linux/: arch.gtc  caller_id.c  gen_threadgbl_asm.cmake  genexport.csh  gtm_env_sp.csh  gtm_env_sp.mk  gtm_getenv.c  gtm_system.c  gtm_threadgbl_deftypes_asm.si  hugetlbfs_overrides.c  hugetlbfs_overrides.h  inst_flush.c  platform.cmake  release_commit.h.in  release_name.h  versions.csh  zbreaksp.h
sr_port/: act_in_gvt.c  actuallist.c  add_atom.c  add_atom.h  add_inter.h  adjust_frames.c  advancewindow.c  advancewindow.h  aio_shim.h  alias.h  alias_funcs.c  alloc_reg.c  alloc_reg.h  anticipatory_freeze.h  arit.h  asc2i.c  asc_hex2i.c  aswp.h  azl_geturxlab.c  azl_geturxrtn.c  backtrace.h  backup_block.c  base_frame.c  bg_update.h  bit_clear.c  bit_clear.h  bit_set.c  bit_set.h  bm_find_blk.c  bm_getfree.c  bm_getfree.h  bm_setmap.c  bm_update.h  bml_busy.c  bml_find_busy.c  bml_find_busy.h  bml_find_free.c  bml_free.c  bml_init.c  bml_newmap.c  (+2321 more)
sr_port_cm/: gtcm_action_pending.c  (+150 more)
sr_unix/: CMakeLists.txt  Makefile.mk  add_db_key.ksh  add_db_key.sh  add_inter.c  aio_shim.c  allrefs.csh  alternate_sighandling.h  anticipatory_freeze.c  append_time_stamp.c  arg_save_area.h  arlinkdbg.h  ascii2hex.c  ast.h  aswp.h  auto_zlink.c  auto_zlink.h  backup_buffer_flush.c  badd.txt  bdeldir.txt  bdelete.txt  bin_load.c  bit_op.h  bit_opi.c  bit_opi.h  build.sh  buildaux.csh  buildaux_dbcertify.csh  buildaux_dse.csh  buildaux_ftok.csh  buildaux_gde.csh  buildaux_geteuid.csh  buildaux_gtcm_gnp_server.csh  buildaux_gtcm_pkdisp.csh  buildaux_gtcm_play.csh  buildaux_gtcm_server.csh  buildaux_gtcm_shmclean.csh  buildaux_gtmcrypt.csh  buildaux_gtmsecshr.csh  buildaux_lke.csh  (+1285 more)
(+1068 files in other folders)
